# bsnet

./: .gitignore  LICENSE  README.md  environment.yml  fact_check_debate_claim.py  pyproject.toml  requirements.txt
.LLM/: blackboard.MD  llm.md
bsnet/: __main__.py
bsnet/src/: __main__.py
bsnet/src/model/: _common.py  embedder.py  extractor.py  renderer.py  scorer.py
bsnet/src/runtime/: orchestrator.py  pipeline.py
bsnet/src/search/: search.py
bsnet/src/utils/: __init__.py  _common.py  buffer.py  outputs.py  search.py  transcription.py
bsnet/src/validation/: validator.py
data/: averitec_samples_base.json  averitec_samples_large.json  averitec_trace_base.json  averitec_trace_large.json
scripts/: eval_averitec.py
tests/: test_extractor.py  test_main.py  test_orchestrator.py  test_pipeline.py  test_renderer.py  test_scorer.py  test_validator.py
transcription/: VoiceToText.py  output.json  output.srt  output.tsv  output.txt  output.vtt  tester.py
