[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsnet"
version = "0.1.0"
description = "Real-time fact-checking for live speech."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "transformers",
    "llama-cpp-python",
    "faster-whisper",
    "sentencepiece",
    "tiktoken",
    "webrtcvad-wheels",
    "pytest",
    "ddgs",
    "torch",
    "torchaudio",
    "bitsandbytes",
    "accelerate",
    "datasets",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bsnet*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
